--- a/scenarioT/weather/lightning/ONT-index_e.html
+++ b/scenarioT/weather/lightning/ONT-index_e.html
@@ -257,12 +257,12 @@
 		<div class="well">
 <h2 class="mrgn-tp-0">Weather Links</h2>
 	<ul class="lst-spcd">
-		<li><a href="../../canada_e.html">Canadian Weather</a></li>
-		<li><a href="../weather/warnings/index_e.html">Public Alerts - Canada</a></li>
+		<li><a href="../../weather/canada_e.html">Canadian Weather</a></li>
+		<li><a href="../../weather/warnings/index_e.html">Public Alerts - Canada</a></li>
 		<li><a href="../../weather/radar/index_e.html">Radar - Canada</a></li>
 		<li><a href="/satellite/index_e.html">Satellite - Canada</a></li>
 		<li><a href="/saisons/index_e.html">Seasonal forecasts</a></li>
-		<li><a href="/mainmenu/airquality_menu_e.html">Air Quality </a></li>
+		<li><a href="../../weather/mainmenu/airquality_menu_e.html">Air Quality </a></li>
 		<li><a href="/marine/index_e.html">Marine - Canada</a></li>
 		<li><a href="http://ec.gc.ca/rhc-wsc/default.asp?lang=En&amp;n=4EED50F1-1">Water Level and Flow</a></li>
 	</ul>
@@ -383,7 +383,7 @@
             <li><a href="../../weather/radar/index_e.html">Radar - Canada</a></li>
             <li><a href="/satellite/index_e.html">Satellite - Canada</a></li>
             <li><a href="/marine/index_e.html">Marine - Canada</a></li>
-            <li><a href="/mainmenu/airquality_menu_e.html">Air Quality</a></li>
+            <li><a href="../../weather//mainmenu/airquality_menu_e.html">Air Quality</a></li>
             <li><a href="http://www.ec.gc.ca/glaces-ice/default.asp?lang=En&amp;n=D32C361E-1">Canadian Ice Service</a></li>
 				<li><a href="/saisons/index_e.html">Seasonal forecasts</a></li>
 				<li><a href="/forecast/public_bulletins_e.html">Extended forecast</a></li>
