--- a/scenarioT/weather/services/environment.html
+++ b/scenarioT/weather/services/environment.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html><!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
 <html class="no-js" lang="en" dir="ltr">
-<!--<![endif]-->
-<head>
+<!--<![endif]--><head>
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
@@ -22,6 +21,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <![endif]-->
 <!--[if lte IE 9]>
 <![endif]-->
+
 <noscript><link rel="stylesheet" href="../wet-boew/css/noscript.min.css" /></noscript>
 <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
 <script>dataLayer1 = [];</script>
@@ -103,7 +103,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <div class="container">
 <div class="row">
 <ol class="breadcrumb">
-<li><a href="/weather/en.html">Home</a></li>
+<li><a href="../../weather/en.html">Home</a></li>
 </ol>
 </div>
 </div>
@@ -132,15 +132,15 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
   <h2 class="wb-inv">Promotions</h2> 
   <div class="wb-tabs carousel-s2 playing" data-speed="slow"> 
    <ul role="tablist"> 
-    <li> <a href="#tab1" title="Tab 1"><img src="/weather/img/promos/environment/20170814-1.jpg" alt="Three endangered whale species in Canada: the North Atlantic Right Whale, the Southern Resident Killer Whale and the St. Lawrence Estuary Beluga"></a></li> 
+    <li> <a href="#tab1" title="Tab 1"><img src="../../weather/img/promos/environment/20170814-1.jpg" alt="Three endangered whale species in Canada: the North Atlantic Right Whale, the Southern Resident Killer Whale and the St. Lawrence Estuary Beluga"></a></li> 
     <!--<li> <a href="#tab2" title="Tab 2"><img src="/weather/img/promos/environment/20170731-1.jpg" alt=""></a></li> --> 
-    <li> <a href="#tab3" title="Tab 3"><img src="/weather/img/promos/environment/20170808-1.jpg" alt=""></a></li> 
-    <li> <a href="#tab4" title="Tab 4"><img src="/weather/img/promos/environment/20170725-1.jpg" alt=""></a></li> 
+    <li> <a href="#tab3" title="Tab 3"><img src="../../weather/img/promos/environment/20170808-1.jpg" alt=""></a></li> 
+    <li> <a href="#tab4" title="Tab 4"><img src="../../weather/img/promos/environment/20170725-1.jpg" alt=""></a></li> 
    </ul> 
    <div role="tabpanel" id="tab1" class="in fade"> 
     <a href="http://www.pc.gc.ca/en/amnc-nmca/cnamnc-cnnmca/lancaster" class="learnmore"> 
      <figure> 
-      <img src="/weather/img/promos/environment/20170814-1.jpg" alt="Arctic coastal region with icebergs"> 
+      <img src="../../weather/img/promos/environment/20170814-1.jpg" alt="Arctic coastal region with icebergs"> 
       <figcaption> 
        <p>Tallurutiup Imanga/Lancaster Sound Marine Conservation Area</p> 
       </figcaption> 
@@ -158,7 +158,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
    <div role="tabpanel" id="tab3" class="out fade"> 
     <a href="http://www.letstalkwhales.ca/?utm_source=dfo-e&amp;utm_medium=bnr&amp;utm_campaign=tlk_whale" class="learnmore"> 
      <figure> 
-      <img src="/weather/img/promos/environment/20170808-1.jpg" alt="Three endangered whale species in Canada: the North Atlantic Right Whale, the Southern Resident Killer Whale and the St. Lawrence Estuary Beluga"> 
+      <img src="../../weather/img/promos/environment/20170808-1.jpg" alt="Three endangered whale species in Canada: the North Atlantic Right Whale, the Southern Resident Killer Whale and the St. Lawrence Estuary Beluga"> 
       <figcaption> 
        <p>Share your ideas on how to help Canada’s whales</p> 
       </figcaption> 
@@ -167,7 +167,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
    <div role="tabpanel" id="tab4" class="out fade"> 
     <a href="http://letstalkfishhabitat.ca/" class="learnmore"> 
      <figure> 
-      <img src="/weather/img/promos/environment/20170725-1.jpg" alt=""> 
+      <img src="../../weather/img/promos/environment/20170725-1.jpg" alt=""> 
       <figcaption> 
        <p>Help protect fish and fish habitat. Share your views!</p> 
       </figcaption> 
@@ -181,7 +181,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
   <h2>Services and information</h2> 
   <div class="row"> 
    <section class="col-md-6"> 
-    <h3 class="h5"><a href="/weather/services/environment/weather.html">Weather, climate and hazards</a></h3> 
+    <h3 class="h5"><a href="../../weather/services/environment/weather.html">Weather, climate and hazards</a></h3> 
     <p>Current conditions, forecasts, historical data, alerts, climate change, natural hazards.</p> 
    </section> 
    <section class="col-md-6"> 
@@ -222,8 +222,8 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
    <h2 class="mrgn-tp-0">Most requested</h2> 
    <ul class="lst-spcd"> 
     <!--<li><a href="/en/environment-climate-change/canadian-environment-week">Canadian Environment Week</a></li>--> 
-    <li><a href="/weather/index_e.html">Current and forecast weather for my community</a></li> 
-    <li><a href="http://weather.gc.ca/radar/index_e.html">Radar for my region</a></li> 
+    <li><a href="../../weather/index_e.html">Current and forecast weather for my community</a></li> 
+    <li><a href="../../weather/radar/index_e.html">Radar for my region</a></li> 
     <li><a href="http://www.ec.gc.ca/ee-ue/default.asp?lang=En&amp;n=EED2E58C-1">Report an environmental emergency</a></li> 
     <li><a href="http://www.dfo-mpo.gc.ca/fm-gp/sdc-cps/licence-permis-eng.htm">Get your commercial fishing licence online</a></li> 
     <li><a href="http://oee.nrcan.gc.ca/pml-lmp/">Find an energy efficient appliance or other product</a></li> 
@@ -239,16 +239,16 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
    <p>Hire an intern and receive funding through the Agricultural Youth Green Jobs Initiative. Applications will be accepted starting April 26 on a first come, first served basis.</p> 
   </section> --> 
   <section class="col-lg-4 col-md-6 mrgn-bttm-md"> 
-   <a href="https://www.ec.gc.ca/inrp-npri/Default.asp?lang=En&amp;n=4A577BB9-1" class="gl-priorities"> <h3 class="h5">National Pollutant Release Inventory</h3> <img src="/weather/img/features/20141218-2.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm"> </a> 
+   <a href="https://www.ec.gc.ca/inrp-npri/Default.asp?lang=En&amp;n=4A577BB9-1" class="gl-priorities"> <h3 class="h5">National Pollutant Release Inventory</h3> <img src="../../weather/img/features/20141218-2.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm"> </a> 
    <p>Find out how the National Pollutant Release Inventory identifies pollution prevention priorities.</p> 
   </section> 
   <div class="clearfix visible-md"></div> 
   <section class="col-lg-4 col-md-6 mrgn-bttm-md"> 
-   <a href="http://www.dfo-mpo.gc.ca/species-especes/index-eng.htm" class="gl-priorities"> <h3 class="h5">Aquatic species at risk</h3> <img src="/weather/img/features/20141218-3.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm"> </a> 
+   <a href="http://www.dfo-mpo.gc.ca/species-especes/index-eng.htm" class="gl-priorities"> <h3 class="h5">Aquatic species at risk</h3> <img src="../../weather/img/features/20141218-3.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm"> </a> 
    <p>Recovery strategies for aquatic species at risk.</p> 
   </section> 
   <section class="col-lg-4 col-md-6 mrgn-bttm-md"> 
-   <a href="/en/campaign/food-policy.html" class="gl-priorities"> <h3 class="h5">A Food Policy for Canada – Let’s build it together</h3> <img src="/weather/img/features/20170529-1.JPG" alt="" class="img-responsive thumbnail mrgn-bttm-sm"> </a> 
+   <a href="/en/campaign/food-policy.html" class="gl-priorities"> <h3 class="h5">A Food Policy for Canada – Let’s build it together</h3> <img src="../../weather/img/features/20170529-1.JPG" alt="" class="img-responsive thumbnail mrgn-bttm-sm"> </a> 
    <p>When it comes to developing A Food Policy for Canada, what matters to you? Have your say.</p> 
   </section> 
  </div> 
