--- a/scenarioT/weather/services/environment/weather.html
+++ b/scenarioT/weather/services/environment/weather.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html><!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
 <html class="no-js" lang="en" dir="ltr">
-<!--<![endif]-->
-<head>
+<!--<![endif]--><head>
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
@@ -22,6 +21,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <![endif]-->
 <!--[if lte IE 9]>
 <![endif]-->
+
 <noscript><link rel="stylesheet" href="../../wet-boew/css/noscript.min.css" /></noscript>
 <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
 <script>dataLayer1 = [];</script>
@@ -103,7 +103,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <div class="container">
 <div class="row">
 <ol class="breadcrumb">
-<li><a href="/weather/en.html">Home</a></li><li><a href="/weather/services/environment.html">Environment and natural resources</a></li>
+<li><a href="../../../weather/en.html">Home</a></li><li><a href="../../../weather/services/environment.html">Environment and natural resources</a></li>
 </ol>
 </div>
 </div>
@@ -117,7 +117,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
   <p class="pagetag">Current conditions, forecasts, historical data, alerts, climate change, natural hazards.</p> 
  </div> 
  <div class="col-md-6 margin-top-small hidden-sm hidden-xs"> 
-  <img src="/weather/img/weather/20150318-1.jpg" alt="(none)" class="pull-right img-responsive thumbnail"> 
+  <img src="../../../weather/img/weather/20150318-1.jpg" alt="(none)" class="pull-right img-responsive thumbnail"> 
  </div> 
 </div> 
 <div class="row"> 
@@ -152,7 +152,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
    </section> 
    <div class="clearfix visible-md visible-lg"></div> 
    <section class="col-md-6"> 
-    <h3 class="h5"><a href="../../services/environment/weather/airquality.html">Air quality</a></h3> 
+    <h3 class="h5"><a href="../../../services/environment/weather/airquality.html">Air quality</a></h3> 
     <p>Health effects, research and data, air pollutants, emissions inventories, sustainability indicators.</p> 
    </section> 
    <section class="col-md-6"> 
@@ -165,11 +165,11 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
   <div class="well"> 
    <h2 class="mrgn-tp-0">Most requested</h2> 
    <ul class="lst-spcd"> 
-    <li><a href="https://gc-proto.github.io/weather/mainmenu/weather_menu_e.html">Current and forecast weather for my community</a></li> 
+    <li><a href="../../../weather/mainmenu/weather_menu_e.html">Current and forecast weather for my community</a></li> 
     <li><a href="http://climate.weather.gc.ca/">Past weather conditions</a></li> 
-    <li><a href="https://gc-proto.github.io/weather/mainmenu/alert_menu_e.html">Weather watches and warnings for my community</a></li> 
+    <li><a href="../../../weather/mainmenu/alert_menu_e.html">Weather watches and warnings for my community</a></li> 
     <li><a href="http://tides.gc.ca/eng">Tides, Currents, and Water Levels</a></li> 
-    <li><a href="https://gc-proto.github.io/weather/radar/index_thunder_e.html">Radar for my region</a></li> 
+    <li><a href="../../../weather/radar/index_e.html">Radar for my region</a></li> 
     <li><a href="http://weather.gc.ca/mainmenu/marine_menu_e.html">Marine weather and warnings</a></li> 
     <li><a href="http://avalanche.pc.gc.ca/index-eng.aspx?d=TODAY">Public avalanche information</a></li> 
    </ul> 
