--- a/scenarioT/weather/services/environment/weather/yourweather.html
+++ b/scenarioT/weather/services/environment/weather/yourweather.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html><!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
 <html class="no-js" lang="en" dir="ltr">
-<!--<![endif]-->
-<head>
+<!--<![endif]--><head>
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
@@ -22,6 +21,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <![endif]-->
 <!--[if lte IE 9]>
 <![endif]-->
+
 <noscript><link rel="stylesheet" href="../../../wet-boew/css/noscript.min.css" /></noscript>
 <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
 <script>dataLayer1 = [];</script>
@@ -103,7 +103,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <div class="container">
 <div class="row">
 <ol class="breadcrumb">
-<li><a href="/weather/en.html">Home</a></li><li><a href="/weather/services/environment.html">Environment and natural resources</a></li><li><a href="/weather/services/environment/weather.html">Weather, climate and hazards</a></li>
+<li><a href="../../../../weather/en.html">Home</a></li><li><a href="../../../../weather/services/environment.html">Environment and natural resources</a></li><li><a href="../../../../weather/services/environment/weather.html">Weather, climate and hazards</a></li>
 </ol>
 </div>
 </div>
@@ -117,7 +117,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
   <p class="pagetag">Short-term and long-term forecasts for locations across Canada.</p> 
  </div> 
  <div class="col-md-6 margin-top-small hidden-sm hidden-xs"> 
-  <img src="/weather/img/weather/20150330-1.jpg" alt="(none)" class="pull-right img-responsive thumbnail"> 
+  <img src="../../../../weather/img/weather/20150330-1.jpg" alt="(none)" class="pull-right img-responsive thumbnail"> 
  </div> 
 </div> 
 <div class="row"> 
@@ -125,7 +125,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
   <h2>Services and information</h2> 
   <div class="row"> 
    <section class="col-lg-6 col-md-6"> 
-    <h3 class="h5"><a href="https://gc-proto.github.io/weather/canada_e.html">Current conditions</a></h3> 
+    <h3 class="h5"><a href="../../../../weather/canada_e.html">Current conditions</a></h3> 
     <p>Know your weather. Plan your day.</p> 
    </section> 
    <section class="col-lg-6 col-md-6"> 
