--- a/scenarioT/weather/mainmenu/airquality_menu_e.html
+++ b/scenarioT/weather/mainmenu/airquality_menu_e.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html><!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
 <html class="no-js" lang="en" dir="ltr">
-<!--<![endif]-->
-<head>
+<!--<![endif]--><head>
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
@@ -12,8 +11,8 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <!-- Meta data-->
 <!--[if gte IE 9 | !IE ]><!-->
 <link href="/weather/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
-<link rel="stylesheet" href="/weather/template/GCWeb/css/theme.min.css">
-<link rel="stylesheet" href="/weather/airquality/css/airquality.css">
+<link rel="stylesheet" href="../../weather/template/GCWeb/css/theme.min.css">
+<link rel="stylesheet" href="../../weather/airquality/css/airquality.css">
 <!--<![endif]-->
 <!--[if lt IE 9]>
 <link href="/weather/GCWeb/assets/favicon.ico" rel="shortcut icon" />
@@ -26,6 +25,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 
 <![endif]-->
+
 <noscript><link rel="stylesheet" href="/weather/wet-boew/css/noscript.min.css" /></noscript>
 <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
 <script>dataLayer1 = [];</script>
@@ -114,10 +114,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	<div class="container">
 	<div class="row">
 		<ol class="breadcrumb">
-		<li><a href="/weather/en.html">Home</a></li><li><a href="/weather/services/environment.html">Environment and natural resources</a></li><li><a href="/weather/index_e.html">Weather information</a></li>
-<li><a href="/weather/mainmenu/weather_menu_e.html">Weather</a></li>
-<li><a href="/weather/canada_e.html">Local forecasts</a></li>
-<li><a href="/weather/forecast/canada/ON_index_e.html" title="Ontario">Ontario</a></li>
+		<li><a href="../../weather/en.html">Home</a></li><li><a href="../../weather/services/environment.html">Environment and natural resources</a></li><li><a href="../../weather/index_e.html">Weather information</a></li>
+<li><a href="../../weather/mainmenu/weather_menu_e.html">Weather</a></li>
+<li><a href="../../weather/canada_e.html">Local forecasts</a></li>
+<li><a href="../../weather/forecast/canada/ON_index_e.html" title="Ontario">Ontario</a></li>
 		</ol>
 	</div>
 </div>
@@ -428,8 +428,8 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <section class="col-lg-4 col-md-6">
 			<h3 class="wxo-footer-nav">Weather Forecasts</h3>
       	<ul class="mrgn-bttm-lg lst-spcd">
-            <li><a href="/canada_e.html">Canadian Weather</a></li>
-            <li><a href="/radar/index_e.html">Radar - Canada</a></li>
+            <li><a href="../../weather/canada_e.html">Canadian Weather</a></li>
+            <li><a href="../../weather/radar/index_e.html">Radar - Canada</a></li>
             <li><a href="/satellite/index_e.html">Satellite - Canada</a></li>
             <li><a href="/marine/index_e.html">Marine - Canada</a></li>
             <li><a href="/mainmenu/airquality_menu_e.html">Air Quality</a></li>
@@ -441,8 +441,8 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <section class="col-lg-4 col-md-6">
 		<h3 class="wxo-footer-nav">Weather Alerts</h3>
       <ul class="mrgn-bttm-lg lst-spcd">
-            <li><a href="/warnings/index_e.html">Public Alerts - Canada</a></li>
-            <li><a href="/lightning/index_e.html">Lightning</a></li>
+            <li><a href="../../weather/warnings/index_e.html">Public Alerts - Canada</a></li>
+            <li><a href="../../weather/lightning/index_e.html">Lightning</a></li>
             <li><a href="/hurricane/index_e.html">Hurricane</a></li>
             <li><a href="/warnings/weathersummaries_e.html">Weather Summaries</a></li>
 				<li><a href="http://www.ec.gc.ca/meteo-weather/default.asp?lang=En&amp;n=15E59C08-1">Hazardous Weather</a></li>
@@ -466,17 +466,17 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <section class="gc-prtts hidden-print"><h2>Features</h2><div class="row"><section class="col-lg-4 col-md-6 mrgn-bttm-md">
 <a rel="external" href="/redirect.php?url=http://ec.gc.ca/uv/default.asp?lang=En&amp;n=DCF1C20A-1">
 <h3 class="h5">UV Index and sun protection</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="/weather/cacheable/images/banners/SM_123_03_30-UV-Index-and-Sun-Protection_button360x203.jpg" alt="" />
+<img class="img-responsive thumbnail mrgn-bttm-sm" src="../../weather/cacheable/images/banners/SM_123_03_30-UV-Index-and-Sun-Protection_button360x203.jpg" alt="" />
 </a>
 <p>Be weather wise!</p></section><section class="col-lg-4 col-md-6 mrgn-bttm-md">
 <a rel="external" href="/redirect.php?url=http://www.canada.ca/en/health-canada/services/sun-safety/extreme-heat-heat-waves.html">
 <h3 class="h5">Extreme Heat Protection</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="/weather/cacheable/images/banners/SM_124_03_30-Extreme-Heat-02_button_360x203.jpg" alt="" />
+<img class="img-responsive thumbnail mrgn-bttm-sm" src="../../weather/cacheable/images/banners/SM_124_03_30-Extreme-Heat-02_button_360x203.jpg" alt="" />
 </a>
 <p>Be prepared!</p></section><section class="col-lg-4 col-md-6 mrgn-bttm-md">
 <a rel="external" href="/redirect.php?url=http://www.ec.gc.ca/cas-aqhi/">
 <h3 class="h5">Be Air Aware</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="/weather/cacheable/images/banners/SM_120_03_30-Air-Quality_01_360x203.jpg" alt="" />
+<img class="img-responsive thumbnail mrgn-bttm-sm" src="../../weather/cacheable/images/banners/SM_120_03_30-Air-Quality_01_360x203.jpg" alt="" />
 </a>
 <p>Air Quality Health Index</p></section></div></section>
 <div class="row pagedetails">
