--- a/scenarioT/weather/mainmenu/alert_menu_e.html
+++ b/scenarioT/weather/mainmenu/alert_menu_e.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html><!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
 <html class="no-js" lang="en" dir="ltr">
-<!--<![endif]-->
-<head>
+<!--<![endif]--><head>
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
@@ -24,6 +23,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <![endif]-->
 <!--[if lte IE 9]>
 <![endif]-->
+
 <noscript><link rel="stylesheet" href="../wet-boew/css/noscript.min.css" /></noscript>
 <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
 <script>dataLayer1 = [];</script>
@@ -109,7 +109,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 		<div class="container">
 	<div class="row">
 		<ol class="breadcrumb">
-<li><a href="https://gc-proto.github.io/weather/en.html">Home</a></li><li><a href="https://gc-proto.github.io/weather/services/environment.html">Environment and natural resources</a></li><li><a href="https://gc-proto.github.io/weather/index_e.html">Weather information</a></li>
+<li><a href="../../weather/en.html">Home</a></li><li><a href="../../weather/services/environment.html">Environment and natural resources</a></li><li><a href="../../weather/index_e.html">Weather information</a></li>
 		</ol>
 	</div>
 </div>
@@ -146,7 +146,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 			<p class="pagetag">Get current weather alerts across Canada from the Authoritative Source of Weather Alerts 24/7; Environment Canada. Read about the latest events in our weather summaries. Know the risk of lightning strikes with our lightning danger maps. Track hurricanes in motion.</p>  
 		</div>
 		<div class="col-md-6 margin-top-small hidden-sm hidden-xs">
-		   <img src="/weather/img/weather/snow-lightning_520x200.jpg" alt="" class="pull-right img-responsive thumbnail">
+		   <img src="../../weather/img/weather/snow-lightning_520x200.jpg" alt="" class="pull-right img-responsive thumbnail">
 		</div>
 
 	</div>
@@ -156,7 +156,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 		
 		<h2 class="header">Warnings, Watches and Statements</h2>
 			<ul class="unol">
-				<li><a href="/weather/warnings/index_e.html">Canada</a></li>
+				<li><a href="../../weather/warnings/index_e.html">Canada</a></li>
 				<li><a href="/warnings/index_e.html?prov=ab">Alberta</a></li>
 				<li><a href="/warnings/index_e.html?prov=bc">British Columbia</a></li>
 				<li><a href="/warnings/index_e.html?prov=mb">Manitoba</a></li>
@@ -166,7 +166,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 				<li><a href="/warnings/index_e.html?prov=ns">Nova Scotia</a></li>
 				<li><a href="/warnings/index_e.html?prov=nu">Nunavut</a></li>
 				<li><a href="/warnings/index_e.html?prov=non">Ontario - north</a></li>
-				<li><a href="/weather/warnings/index_e.html?prov=son">Ontario - south</a></li>
+				<li><a href="../../weather/warnings/index_e.html?prov=son">Ontario - south</a></li>
 				<li><a href="/warnings/index_e.html?prov=pei">Prince Edward Island</a></li>
 				<li><a href="/warnings/index_e.html?prov=nqc">Quebec - north</a></li>
 				<li><a href="/warnings/index_e.html?prov=sqc">Quebec - south</a></li>
@@ -199,10 +199,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 		<section class="col-lg-4 col-md-6 sect">
 		<h2 class="header">Lightning Danger</h2>
 			<ul class="unol">
-				<li><a href="/weather/lightning/index_e.html">Canada</a></li>
+				<li><a href="../../weather/lightning/index_e.html">Canada</a></li>
 				<li><a href="/lightning/index_e.html?id=ARC">Arctic</a></li>
 				<li><a href="/lightning/index_e.html?id=ATL">Atlantic</a></li>
-				<li><a href="/weather/lightning/ONT-index_e.html">Ontario</a></li>
+				<li><a href="../../weather/lightning/ONT-index_e.html">Ontario</a></li>
 				<li><a href="/lightning/index_e.html?id=PAC">Pacific</a></li>
 				<li><a href="/lightning/index_e.html?id=WRN">Prairies</a></li>
 				<li><a href="/lightning/index_e.html?id=QUE">Quebec</a></li>
@@ -237,8 +237,8 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <section class="col-lg-4 col-md-6">
 			<h3 class="wxo-footer-nav">Weather Forecasts</h3>
       	<ul class="mrgn-bttm-lg lst-spcd">
-            <li><a href="/weather/canada_e.html">Canadian Weather</a></li>
-            <li><a href="https://gc-proto.github.io/weather/radar/index_thunder_e.html">Radar - Canada</a></li>
+            <li><a href="../../weather/canada_e.html">Canadian Weather</a></li>
+            <li><a href="../../weather/radar/index_e.html">Radar - Canada</a></li>
             <li><a href="/satellite/index_e.html">Satellite - Canada</a></li>
             <li><a href="/marine/index_e.html">Marine - Canada</a></li>
             <li><a href="/weather/mainmenu/airquality_menu_e.html">Air Quality</a></li>
@@ -250,8 +250,8 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <section class="col-lg-4 col-md-6">
 		<h3 class="wxo-footer-nav">Weather Alerts</h3>
       <ul class="mrgn-bttm-lg lst-spcd">
-            <li><a href="/warnings/index_e.html">Public Alerts - Canada</a></li>
-            <li><a href="/weather/lightning/index_e.html">Lightning</a></li>
+            <li><a href="../../weather/warnings/index_e.html">Public Alerts - Canada</a></li>
+            <li><a href="../../weather/lightning/index_e.html">Lightning</a></li>
             <li><a href="/hurricane/index_e.html">Hurricane</a></li>
             <li><a href="/warnings/weathersummaries_e.html">Weather Summaries</a></li>
 				<li><a href="http://www.ec.gc.ca/meteo-weather/default.asp?lang=En&amp;n=15E59C08-1">Hazardous Weather</a></li>
@@ -275,17 +275,17 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <section class="gc-prtts"><h2>Features</h2><div class="row"><section class="col-lg-4 col-md-6 mrgn-bttm-md">
 <a rel="external" href="/redirect.php?url=http://ec.gc.ca/uv/default.asp?lang=En&amp;n=DCF1C20A-1">
 <h3 class="h5">UV Index and sun protection</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="/weather/cacheable/images/banners/SM_123_03_30-UV-Index-and-Sun-Protection_button360x203.jpg?ver=1499874128" alt="" />
+<img class="img-responsive thumbnail mrgn-bttm-sm" src="../../weather/cacheable/images/banners/SM_123_03_30-UV-Index-and-Sun-Protection_button360x203.jpg?ver=1499874128" alt="" />
 </a>
 <p>Be weather wise!</p></section><section class="col-lg-4 col-md-6 mrgn-bttm-md">
 <a rel="external" href="/redirect.php?url=http://www.canada.ca/en/health-canada/services/sun-safety/extreme-heat-heat-waves.html">
 <h3 class="h5">Extreme Heat Protection</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="/weather/cacheable/images/banners/SM_124_03_30-Extreme-Heat-02_button_360x203.jpg?ver=1499874128" alt="" />
+<img class="img-responsive thumbnail mrgn-bttm-sm" src="../../weather/cacheable/images/banners/SM_124_03_30-Extreme-Heat-02_button_360x203.jpg?ver=1499874128" alt="" />
 </a>
 <p>Be prepared!</p></section><section class="col-lg-4 col-md-6 mrgn-bttm-md">
 <a rel="external" href="/redirect.php?url=http://www.ec.gc.ca/cas-aqhi/">
 <h3 class="h5">Be Air Aware</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="/weather/cacheable/images/banners/SM_120_03_30-Air-Quality_01_360x203.jpg?ver=1499874128" alt="" />
+<img class="img-responsive thumbnail mrgn-bttm-sm" src="../../weather/cacheable/images/banners/SM_120_03_30-Air-Quality_01_360x203.jpg?ver=1499874128" alt="" />
 </a>
 <p>Air Quality Health Index</p></section></div></section>
 <div class="row pagedetails">
