--- a/scenarioT/weather/forecast/canada/ON_index_e.html
+++ b/scenarioT/weather/forecast/canada/ON_index_e.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html><!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
 <html class="no-js" lang="en" dir="ltr">
-<!--<![endif]-->
-<head>
+<!--<![endif]--><head>
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
@@ -24,6 +23,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <![endif]-->
 <!--[if lte IE 9]>
 <![endif]-->
+
 <noscript><link rel="stylesheet" href="../../wet-boew/css/noscript.min.css" /></noscript>
 <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
 <script>dataLayer1 = [];</script>
@@ -109,7 +109,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 		<div class="container">
 	<div class="row">
 		<ol class="breadcrumb">
-<li><a href="/weather/canada_en.html">Home</a></li><li><a href="/weather/services/environment.html">Environment and natural resources</a></li>
+<li><a href="../../../weather/en.html">Home</a></li><li><a href="../../../weather/services/environment.html">Environment and natural resources</a></li>
 		</ol>
 	</div>
 </div>
@@ -184,12 +184,12 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 		      <div class="well">
 <h2 class="mrgn-tp-0">Weather Links</h2>
 	<ul class="lst-spcd">
-		<li><a href="/weather/canada_e.html">Canadian Weather</a></li>
-		<li><a href="/weather/warnings/index_e.html">Public Alerts - Canada</a></li>
-		<li><a href="/weather/radar/index_e.html">Radar - Canada</a></li>
+		<li><a href="../../../weather/index_e.html">Canadian Weather</a></li>
+		<li><a href="../../../weather/warnings/index_e.html">Public Alerts - Canada</a></li>
+		<li><a href="../../../weather/radar/index_e.html">Radar - Canada</a></li>
 		<li><a href="/weather/satellite/index_e.html">Satellite - Canada</a></li>
 		<li><a href="/weather/saisons/index_e.html">Seasonal forecasts</a></li>
-		<li><a href="/weather/mainmenu/airquality_menu_e.html">Air Quality </a></li>
+		<li><a href="../../../weather/mainmenu/airquality_menu_e.html">Air Quality </a></li>
 		<li><a href="/weather/marine/index_e.html">Marine - Canada</a></li>
 		<li><a href="http://ec.gc.ca/rhc-wsc/default.asp?lang=En&amp;n=4EED50F1-1">Water Level and Flow</a></li>
 	</ul>
@@ -372,7 +372,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <li><a href="/city/pages/on-140_metric_e.html">Orangeville</a></li>
 <li><a href="/city/pages/on-13_metric_e.html">Orillia</a></li>
 <li><a href="/city/pages/on-117_metric_e.html">Oshawa</a></li>
-<li><a href="/weather/city/pages/on-118_metric_e.html">Ottawa (Kanata - Orléans)</a></li>
+<li><a href="../../../weather/city/pages/on-118_metric_e.html">Ottawa (Kanata - Orléans)</a></li>
 <li><a href="/city/pages/on-52_metric_e.html">Ottawa (Richmond - Metcalfe)</a></li>
 <li><a href="/city/pages/on-7_metric_e.html">Owen Sound</a></li>
 <li><a href="/city/pages/on-53_metric_e.html">Oxtongue Lake</a></li>
@@ -566,7 +566,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <li><a href="/city/pages/on-140_metric_e.html">Orangeville</a></li>
 <li><a href="/city/pages/on-13_metric_e.html">Orillia</a></li>
 <li><a href="/city/pages/on-117_metric_e.html">Oshawa</a></li>
-<li><a href="/weather/city/pages/on-118_metric_e.html">Ottawa (Kanata - Orléans)</a></li>
+<li><a href="../../../weather/city/pages/on-118_metric_e.html">Ottawa (Kanata - Orléans)</a></li>
 <li><a href="/city/pages/on-52_metric_e.html">Ottawa (Richmond - Metcalfe)</a></li>
 <li><a href="/city/pages/on-7_metric_e.html">Owen Sound</a></li>
 <li><a href="/city/pages/on-53_metric_e.html">Oxtongue Lake</a></li>
@@ -656,11 +656,11 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <section class="col-lg-4 col-md-6">
 			<h3 class="wxo-footer-nav">Weather Forecasts</h3>
       	<ul class="mrgn-bttm-lg lst-spcd">
-            <li><a href="/canada_e.html">Canadian Weather</a></li>
-            <li><a href="/radar/index_e.html">Radar - Canada</a></li>
+            <li><a href="../../../weather/canada_e.html">Canadian Weather</a></li>
+            <li><a href="../../../weather/radar/index_e.html">Radar - Canada</a></li>
             <li><a href="/satellite/index_e.html">Satellite - Canada</a></li>
             <li><a href="/marine/index_e.html">Marine - Canada</a></li>
-            <li><a href="/mainmenu/airquality_menu_e.html">Air Quality</a></li>
+            <li><a href="../../../weather/mainmenu/airquality_menu_e.html">Air Quality</a></li>
             <li><a href="http://www.ec.gc.ca/glaces-ice/default.asp?lang=En&amp;n=D32C361E-1">Canadian Ice Service</a></li>
 				<li><a href="/saisons/index_e.html">Seasonal forecasts</a></li>
 				<li><a href="/forecast/public_bulletins_e.html">Extended forecast</a></li>
@@ -669,8 +669,8 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <section class="col-lg-4 col-md-6">
 		<h3 class="wxo-footer-nav">Weather Alerts</h3>
       <ul class="mrgn-bttm-lg lst-spcd">
-            <li><a href="/warnings/index_e.html">Public Alerts - Canada</a></li>
-            <li><a href="/lightning/index_e.html">Lightning</a></li>
+            <li><a href="../../../weather/warnings/index_e.html">Public Alerts - Canada</a></li>
+            <li><a href="../../../weather/lightning/index_e.html">Lightning</a></li>
             <li><a href="/hurricane/index_e.html">Hurricane</a></li>
             <li><a href="/warnings/weathersummaries_e.html">Weather Summaries</a></li>
 				<li><a href="http://www.ec.gc.ca/meteo-weather/default.asp?lang=En&amp;n=15E59C08-1">Hazardous Weather</a></li>
@@ -694,17 +694,17 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <section class="gc-prtts"><h2>Features</h2><div class="row"><section class="col-lg-4 col-md-6 mrgn-bttm-md">
 <a rel="external" href="/redirect.php?url=http://ec.gc.ca/uv/default.asp?lang=En&amp;n=DCF1C20A-1">
 <h3 class="h5">UV Index and sun protection</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="/weather/cacheable/images/banners/SM_123_03_30-UV-Index-and-Sun-Protection_button360x203.jpg?ver=1499874128" alt="" />
+<img class="img-responsive thumbnail mrgn-bttm-sm" src="../../../weather/cacheable/images/banners/SM_123_03_30-UV-Index-and-Sun-Protection_button360x203.jpg?ver=1499874128" alt="" />
 </a>
 <p>Be weather wise!</p></section><section class="col-lg-4 col-md-6 mrgn-bttm-md">
 <a rel="external" href="/redirect.php?url=http://www.canada.ca/en/health-canada/services/sun-safety/extreme-heat-heat-waves.html">
 <h3 class="h5">Extreme Heat Protection</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="/weather/cacheable/images/banners/SM_124_03_30-Extreme-Heat-02_button_360x203.jpg?ver=1499874128" alt="" />
+<img class="img-responsive thumbnail mrgn-bttm-sm" src="../../../weather/cacheable/images/banners/SM_124_03_30-Extreme-Heat-02_button_360x203.jpg?ver=1499874128" alt="" />
 </a>
 <p>Be prepared!</p></section><section class="col-lg-4 col-md-6 mrgn-bttm-md">
 <a rel="external" href="/redirect.php?url=http://www.ec.gc.ca/cas-aqhi/">
 <h3 class="h5">Be Air Aware</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="/weather/cacheable/images/banners/SM_120_03_30-Air-Quality_01_360x203.jpg?ver=1499874128" alt="" />
+<img class="img-responsive thumbnail mrgn-bttm-sm" src="../../../weather/cacheable/images/banners/SM_120_03_30-Air-Quality_01_360x203.jpg?ver=1499874128" alt="" />
 </a>
 <p>Air Quality Health Index</p></section></div></section>
 <div class="row pagedetails">
