--- a/scenarioT/weather/forecast/hourly/on-118_metric_e.html
+++ b/scenarioT/weather/forecast/hourly/on-118_metric_e.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html><!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
 <html class="no-js" lang="en" dir="ltr">
-<!--<![endif]-->
-<head>
+<!--<![endif]--><head>
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
@@ -24,6 +23,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <![endif]-->
 <!--[if lte IE 9]>
 <![endif]-->
+
 <noscript><link rel="stylesheet" href="../../wet-boew/css/noscript.min.css" /></noscript>
 <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
 <script>dataLayer1 = [];</script>
@@ -109,12 +109,12 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 		<div class="container">
 	<div class="row">
 		<ol class="breadcrumb">
-<li><a href="/weather/canada_en.html">Home</a></li><li><a href="/weather/services/environment.html">Environment and natural resources</a></li>
-<li><a href="/weather/index_e.html">Weather information</a></li>
-<li><a href="/weather/mainmenu/weather_menu_e.html">Weather</a></li>
-<li><a href="/weather/canada_e.html">Local Forecasts</a></li>
-<li><a href="/weather/forecast/canada/ON_index_e.html">Ontario</a></li>
-<li><a href="/weather/city/pages/on-118_metric_e.html">Ottawa (Kanata - Orléans)</a></li>
+<li><a href="../../../weather/en.html">Home</a></li><li><a href="../../../weather/services/environment.html">Environment and natural resources</a></li>
+<li><a href="../../../weather/index_e.html">Weather information</a></li>
+<li><a href="../../..//weather/mainmenu/weather_menu_e.html">Weather</a></li>
+<li><a href="../../..//weather/canada_e.html">Local Forecasts</a></li>
+<li><a href="../../..//weather/forecast/canada/ON_index_e.html">Ontario</a></li>
+<li><a href="../../..//weather/city/pages/on-118_metric_e.html">Ottawa (Kanata - Orléans)</a></li>
 		</ol>
 	</div>
 </div>
@@ -529,7 +529,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       </section>
 	</div>
 </section>
-<section class="gc-prtts"><h2>Features</h2><div class="row"><section class="col-lg-4 col-md-6 mrgn-bttm-md">
+<!-- <section class="gc-prtts"><h2>Features</h2><div class="row"><section class="col-lg-4 col-md-6 mrgn-bttm-md">
 <a rel="external" href="/redirect.php?url=http://ec.gc.ca/uv/default.asp?lang=En&amp;n=DCF1C20A-1">
 <h3 class="h5">UV Index and sun protection</h3>
 <img class="img-responsive thumbnail mrgn-bttm-sm" src="/weather/cacheable/images/banners/SM_123_03_30-UV-Index-and-Sun-Protection_button360x203.jpg?ver=1499874128" alt="" />
@@ -544,7 +544,8 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <h3 class="h5">Be Air Aware</h3>
 <img class="img-responsive thumbnail mrgn-bttm-sm" src="/weather/cacheable/images/banners/SM_120_03_30-Air-Quality_01_360x203.jpg?ver=1499874128" alt="" />
 </a>
-<p>Air Quality Health Index</p></section></div></section>
+<p>Air Quality Health Index</p></section></div></section> -->
+
 <div class="row pagedetails">
 <div class="col-sm-6 col-lg-4 mrgn-tp-sm">
 <a href="https://www.canada.ca/en/report-problem.html" class="btn btn-default btn-block">Report a problem or mistake on this page</a>
@@ -560,6 +561,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </div>
 </div>
 </main>
+
 <aside class="gc-nttvs container">
 <h2>Government of Canada activities and initiatives</h2>
 <div id="gcwb_prts" class="wb-eqht row" data-ajax-replace="/data/pco-fetch/features-en.html">
